<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number1" />

    <EditText
        android:id="@+id/field1"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number2" />

    <EditText
        android:id="@+id/field2"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/sumBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sum" />

    <Button
        android:id="@+id/minBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/min" />

    <Button
        android:id="@+id/mulBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mul" />

    <Button
        android:id="@+id/devBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dev" />
    

</LinearLayout>